<resources>
    <string name="app_name">SitecTestLogin</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="s_w_w">Something went wrong</string>
    <string name="no_network_error">No network connection</string>
    <string name="server_return_empty_set">Server return empty set</string>
    <string name="sign_in">Sign In</string>
    <string name="select_user">Select user</string>
    <string name="password">Password</string>
    <string name="login_failed">Login failed</string>
    <string name="testlogin">TestLogin</string>
    <string name="initialization">Initialization…</string>
    <string name="action_continue">Ok, I\'m understand</string>
    <string name="the_functionality_of_the_application_is_presented_exclusively_in_accordance_with_the_requirements_of_the_task_so_some_expected_features_may_be_missing">The functionality of the application is presented exclusively in accordance with the requirements of the task. So some expected features may be missing</string>
    <string name="this_application_makes_with_using_next_tecnology_stack_n_n_mvp_mvvm_n_retrofit_gson_okhttp_n_coroutines_rxjava_n_room_n_jetpack_navigation_view_binding">This Application makes with using next tecnology stack:\n\n- MVP,MVVM\n- Retrofit, Gson, OkHTTP\n- Coroutines, RxJava\n- Room\n- Jetpack Navigation, View Binding\n- Hilt</string>
    <string name="reply_text">Reply</string>
    <string name="close_app_text">Close App</string>
    <string name="mvp">MVP</string>
    <string name="mvvm">MVVM</string>
</resources>